src/test/ui/consts/const-for.stderr
error[E0277]: the trait bound `std::ops::Range<{integer}>: Iterator` is not satisfied
  --> $DIR/const-for.rs:5:14
   |
LL |     for _ in 0..5 {}
   |              ^^^^ `std::ops::Range<{integer}>` is not an iterator
   |
   = help: the trait `~const Iterator` is not implemented for `std::ops::Range<{integer}>`
note: the trait `Iterator` is implemented for `std::ops::Range<{integer}>`, but that implementation is not `const`
  --> $DIR/const-for.rs:5:14
   |
LL |     for _ in 0..5 {}
   |              ^^^^
   = note: required for `std::ops::Range<{integer}>` to implement `~const IntoIterator`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
